<resources>
    <string name="app_name">LocationApp</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for getting location
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>
    <string name="sortby">sortBy</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_mobile">Sort By Mobile</string>
    <string name="sort_by_email">Sort By Email</string>
    <string name="sort_by_dob">Sort By DOB</string>
</resources>
